// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`execute with alternative geography/location should return success 1`] = `
Object {
  "data": Object {
    "B19001_001E": 162,
    "B19001_002E": 9,
    "B19001_003E": 41,
    "B19001_004E": 0,
    "B19001_005E": 22,
    "B19001_006E": 4,
    "B19001_007E": 0,
    "B19001_008E": 0,
    "B19001_009E": 10,
    "B19001_010E": 3,
    "B19001_011E": 6,
    "B19001_012E": 25,
    "B19001_013E": 27,
    "B19001_014E": 0,
    "B19001_015E": 0,
    "B19001_016E": 9,
    "B19001_017E": 6,
    "NAME": "Census Tract 199, Queens County, New York",
    "county": "081",
    "result": "0x000000000000000000000000000000000000000000000000000000000000024000000000000000000000000000000000000000000000000000000000000000a20000000000000000000000000000000000000000000000000000000000000009000000000000000000000000000000000000000000000000000000000000002900000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000016000000000000000000000000000000000000000000000000000000000000000400000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000a000000000000000000000000000000000000000000000000000000000000000300000000000000000000000000000000000000000000000000000000000000060000000000000000000000000000000000000000000000000000000000000019000000000000000000000000000000000000000000000000000000000000001b0000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000090000000000000000000000000000000000000000000000000000000000000006000000000000000000000000000000000000000000000000000000000000002943656e737573205472616374203139392c20517565656e7320436f756e74792c204e657720596f726b0000000000000000000000000000000000000000000000",
    "state": "36",
    "tract": "019900",
  },
  "jobRunID": "1",
  "result": "0x000000000000000000000000000000000000000000000000000000000000024000000000000000000000000000000000000000000000000000000000000000a20000000000000000000000000000000000000000000000000000000000000009000000000000000000000000000000000000000000000000000000000000002900000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000016000000000000000000000000000000000000000000000000000000000000000400000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000a000000000000000000000000000000000000000000000000000000000000000300000000000000000000000000000000000000000000000000000000000000060000000000000000000000000000000000000000000000000000000000000019000000000000000000000000000000000000000000000000000000000000001b0000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000090000000000000000000000000000000000000000000000000000000000000006000000000000000000000000000000000000000000000000000000000000002943656e737573205472616374203139392c20517565656e7320436f756e74792c204e657720596f726b0000000000000000000000000000000000000000000000",
  "statusCode": 200,
}
`;

exports[`execute with valid input 2 should return success 1`] = `
Object {
  "data": Object {
    "B08101_001E": 18191555,
    "B08101_017E": 1841632,
    "B08101_025E": 923834,
    "B08101_033E": 476291,
    "NAME": "California",
    "result": "0x00000000000000000000000000000000000000000000000000000000000000a000000000000000000000000000000000000000000000000000000000011594c300000000000000000000000000000000000000000000000000000000001c19e000000000000000000000000000000000000000000000000000000000000e18ba0000000000000000000000000000000000000000000000000000000000074483000000000000000000000000000000000000000000000000000000000000000a43616c69666f726e696100000000000000000000000000000000000000000000",
    "state": "06",
  },
  "jobRunID": "1",
  "result": "0x00000000000000000000000000000000000000000000000000000000000000a000000000000000000000000000000000000000000000000000000000011594c300000000000000000000000000000000000000000000000000000000001c19e000000000000000000000000000000000000000000000000000000000000e18ba0000000000000000000000000000000000000000000000000000000000074483000000000000000000000000000000000000000000000000000000000000000a43616c69666f726e696100000000000000000000000000000000000000000000",
  "statusCode": 200,
}
`;

exports[`execute with valid input 2013 should return success 1`] = `
Object {
  "data": Object {
    "B08101_001E": 16290887,
    "NAME": "California",
    "result": "0x00000000000000000000000000000000000000000000000000000000000000400000000000000000000000000000000000000000000000000000000000f89447000000000000000000000000000000000000000000000000000000000000000a43616c69666f726e696100000000000000000000000000000000000000000000",
    "state": "06",
  },
  "jobRunID": "1",
  "result": "0x00000000000000000000000000000000000000000000000000000000000000400000000000000000000000000000000000000000000000000000000000f89447000000000000000000000000000000000000000000000000000000000000000a43616c69666f726e696100000000000000000000000000000000000000000000",
  "statusCode": 200,
}
`;

exports[`execute with valid input 2014 should return success 1`] = `
Object {
  "data": Object {
    "B08101_001E": 16529777,
    "NAME": "California",
    "result": "0x00000000000000000000000000000000000000000000000000000000000000400000000000000000000000000000000000000000000000000000000000fc3971000000000000000000000000000000000000000000000000000000000000000a43616c69666f726e696100000000000000000000000000000000000000000000",
    "state": "06",
  },
  "jobRunID": "1",
  "result": "0x00000000000000000000000000000000000000000000000000000000000000400000000000000000000000000000000000000000000000000000000000fc3971000000000000000000000000000000000000000000000000000000000000000a43616c69666f726e696100000000000000000000000000000000000000000000",
  "statusCode": 200,
}
`;

exports[`execute with valid input 2015 should return success 1`] = `
Object {
  "data": Object {
    "B08101_001E": 16869052,
    "NAME": "California",
    "result": "0x000000000000000000000000000000000000000000000000000000000000004000000000000000000000000000000000000000000000000000000000010166bc000000000000000000000000000000000000000000000000000000000000000a43616c69666f726e696100000000000000000000000000000000000000000000",
    "state": "06",
  },
  "jobRunID": "1",
  "result": "0x000000000000000000000000000000000000000000000000000000000000004000000000000000000000000000000000000000000000000000000000010166bc000000000000000000000000000000000000000000000000000000000000000a43616c69666f726e696100000000000000000000000000000000000000000000",
  "statusCode": 200,
}
`;

exports[`execute with valid input 2016 should return success 1`] = `
Object {
  "data": Object {
    "B08101_001E": 17193695,
    "NAME": "California",
    "result": "0x00000000000000000000000000000000000000000000000000000000000000400000000000000000000000000000000000000000000000000000000001065adf000000000000000000000000000000000000000000000000000000000000000a43616c69666f726e696100000000000000000000000000000000000000000000",
    "state": "06",
  },
  "jobRunID": "1",
  "result": "0x00000000000000000000000000000000000000000000000000000000000000400000000000000000000000000000000000000000000000000000000001065adf000000000000000000000000000000000000000000000000000000000000000a43616c69666f726e696100000000000000000000000000000000000000000000",
  "statusCode": 200,
}
`;

exports[`execute with valid input 2017 should return success 1`] = `
Object {
  "data": Object {
    "B08101_001E": 17589758,
    "NAME": "California",
    "result": "0x000000000000000000000000000000000000000000000000000000000000004000000000000000000000000000000000000000000000000000000000010c65fe000000000000000000000000000000000000000000000000000000000000000a43616c69666f726e696100000000000000000000000000000000000000000000",
    "state": "06",
  },
  "jobRunID": "1",
  "result": "0x000000000000000000000000000000000000000000000000000000000000004000000000000000000000000000000000000000000000000000000000010c65fe000000000000000000000000000000000000000000000000000000000000000a43616c69666f726e696100000000000000000000000000000000000000000000",
  "statusCode": 200,
}
`;

exports[`execute with valid input 2018 should return success 1`] = `
Object {
  "data": Object {
    "B08101_001E": 17904213,
    "NAME": "California",
    "result": "0x00000000000000000000000000000000000000000000000000000000000000400000000000000000000000000000000000000000000000000000000001113255000000000000000000000000000000000000000000000000000000000000000a43616c69666f726e696100000000000000000000000000000000000000000000",
    "state": "06",
  },
  "jobRunID": "1",
  "result": "0x00000000000000000000000000000000000000000000000000000000000000400000000000000000000000000000000000000000000000000000000001113255000000000000000000000000000000000000000000000000000000000000000a43616c69666f726e696100000000000000000000000000000000000000000000",
  "statusCode": 200,
}
`;

exports[`execute with valid input should return success 1`] = `
Object {
  "data": Object {
    "B25001_001E": 14175976,
    "B25002_002E": 13044266,
    "NAME": "California",
    "result": "0x00000000000000000000000000000000000000000000000000000000000000600000000000000000000000000000000000000000000000000000000000d84ee80000000000000000000000000000000000000000000000000000000000c70a2a000000000000000000000000000000000000000000000000000000000000000a43616c69666f726e696100000000000000000000000000000000000000000000",
    "state": "06",
  },
  "jobRunID": "1",
  "result": "0x00000000000000000000000000000000000000000000000000000000000000600000000000000000000000000000000000000000000000000000000000d84ee80000000000000000000000000000000000000000000000000000000000c70a2a000000000000000000000000000000000000000000000000000000000000000a43616c69666f726e696100000000000000000000000000000000000000000000",
  "statusCode": 200,
}
`;
